Variableize the redis service name and conf file instead of relying on a fixed format with listening port appended. Don't attempt to do SysV init stuff when using systemd.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: restart redis
-  service: name=redis_{{ redis_port }} state=restarted
+  service: name={{ redis_service_name }} state=restarted
   when: redis_as_service
 
 - name: restart sentinel
