--- a/tasks/server.yml
+++ b/tasks/server.yml
@@ -22,7 +22,7 @@
   when: redis_as_service and use_systemd
 
 - name: set redis to start at boot
-  service: name=redis_{{ redis_port }} enabled=yes
+  service: name={{ redis_service_name }} enabled=yes
   when: redis_as_service
 
 - name: check if log file exists
@@ -34,6 +34,7 @@
         owner={{ redis_user }}
         state=directory
         recurse=yes
+  when: not use_systemd
 
 - name: ensure logfile directory exists and has correct owner
   file: path={{ redis_logfile|dirname }}
@@ -58,13 +59,13 @@
 - name: add redis init config file
   template: dest=/etc/sysconfig/redis_{{ redis_port }}
             src=redis.init.conf.j2
-  when: ansible_os_family == "RedHat"
+  when: ansible_os_family == "RedHat" and not use_systemd
   notify: restart redis
 
 - name: add redis init config file
   template: dest=/etc/default/redis_{{ redis_port }}
             src=redis.init.conf.j2
-  when: ansible_os_family == "Debian"
+  when: ansible_os_family == "Debian" and not use_systemd
   notify: restart redis
 
 # Flush handlers before ensuring the service is started to prevent
