--- a/tests/test_server.yml
+++ b/tests/test_server.yml
@@ -1,7 +1,10 @@
 ---
 - hosts: localhost
   remote_user: root
+  environment:
+      http_proxy: http://httpproxy.amicillc.com:8080
+      https_proxy: http://httpproxy.amicillc.com:8080
   vars:
-    - redis_travis_ci: true
+    - redis_version: 3.0.5
   roles:
-    - ansible-redis
+    - role: ansible-redis
